[#2816060] add MALLOC_ARENA_MAX env var, add gc log related option in start command for k8s